# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2125 2012/01/11 14:36:32 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta4 2012-01-??
 - 2012-01-11 Updated CPAN module Local::Codes to version 3.20.
 - 2012-01-11 Updated CPAN module LWP::UserAgent to version 6.03.
 - 2012-01-11 Updated CPAN module Digest::SHA::PurePerl to version 5.70.
 - 2012-01-11 Updated CPAN module CGI to version 3.59.
 - 2012-01-10 Fixed bug#8095 - DashboardTicketGeneric does not support dynamic fields.
 - 2012-01-10 Ticket search and ticket link requires at least one search parameter.
 - 2012-01-09 Improved consistency of ChallengeToken checks in the agent and admin interface.
 - 2012-01-03 Updated Serbian translation, thanks to Milorad Jovanovic!
 - 2011-12-23 Fixed bug#8052 - ACLs code is called even when there is no defined ACL or ACL module.
 - 2011-12-23 Fixed bug#8037 - Registration screen in web installer produces HTTP 500 error.
 - 2011-12-22 Fixed bug#7947 - Service list can be made useless with simple ACL And/Or Disabling
    services.
 - 2011-12-22 Fixed bug#8049 - TicketFreeText X-Headers should not exist on new installations.
 - 2011-12-22 Fixed bug#8043 - Ticket Split does not use default ACLs from parent.
 - 2011-12-21 Fixed bug#8044 - TicketACL does not get dynamic fields as ticket attributes always.
 - 2011-12-21 Fixed bug#8039 - SysConfig writes files in a non-atomic way.
 - 2011-12-20 Fixed bug#4239 - Include ticket number in toolbar fulltext search.
 - 2011-12-20 Fixed bug#7955 - Customer identity is not displayed on Customer Interface.
 - 2011-12-20 Fixed bug#8035 - SOAP interface does not allow to create/update
    CustomerCompany records.
 - 2011-12-20 Fixed bug#8027 - Duplicated slash in cache subdirectory names.